--- a/src/out_patients/modules/qms/qms.component.scss
+++ b/src/out_patients/modules/qms/qms.component.scss
@@ -10,6 +10,9 @@
 .bg-white{
     background-color: #fff;
 }
+.bg-top{
+    background-color: #DAE9F8;
+}
 .border-radius{
     border: 1px solid #707070;
 }
@@ -19,18 +22,14 @@
 .mandatory{
     color: red;
 }
-.label{
-    ::ng-deep  mat-label{
+.qms-body-wrapper{
+    .label ::ng-deep  mat-label{
         display: none;
     }
-}
-
-.wt-banner{
     ::ng-deep .mat-tab-link{
         min-width: auto !important;
     }
 }
-
 .w-35{
     width: 35%;
 }
